deployments/mbirchdk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbirchdkprod
  namespace: mbirchdk
spec:
  rules:
  - host: mbirch.dk
    http:
      paths:
      - backend:
          service:
            name: mbirchwebsite-svc
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mbirch.dk
    secretName: mbirch.dk
    
  certificate:
    mbirch.dk:
      namespace: mbirchdk
      spec:
        secretName: mbirch.dk
        issuerRef:
          name: letsencrypt-prod
          kind: ClusterIssuer
          group: cert-manager.io
        dnsNames:
          - mbirch.dk
